fix viewCV positioning on small screen

--- a/style.css
+++ b/style.css
@@ -96,12 +96,12 @@ body.dark ::-moz-selection { background-color: rgba(255, 255, 255, 0.2); /* Geck
 
 #intro {
     text-align: center;
-    margin-top: 80px;
+    margin-top: 48px;
     margin-bottom: 48px;
 }
 
 #intro__word {
-    height: 104px;
+    padding: 20px 0;
 }
 
 @media (min-width: 800px) {
